<resources>
    <string name="app_name">ActivityCallAndResultReturn</string>
    <string name="name">Name</string>
    <string name="has_a_car">Has a Car</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="submit">Submit</string>
    <string name="not_registered">Not Registered</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_role_selected">No Role Selected</string>
    <string name="registered_data">Registered Data</string>
    <string name="submit_and_rate">Submit and Rate</string>
    <string name="rating">Rating</string>
</resources>